[package]
name = "log-log-akita"
version = "0.1.0"
authors = ["Guillaume Eveillard"]
edition = "2021"

[dependencies]
yew = "0.18"
serde = "1"
serde_derive = "1"
clap = "3.0.0-beta.5"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
smallvec = {version = "1.7.0", features = ['union']}
chrono = "0.4.19"

[[bin]]
name = "cli"
path = "src/cli/mod.rs"

[[bin]]
name = "server"
path = "src/server/mod.rs"

[[bin]]
name = "web"
path = "src/web/mod.rs"